--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </a>
             </div>
 
-            <ul class="list" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
+            <ul class="list">
                 <li>
                     <a href="#">Phone</a>
                 </li>
